# FEdAp

./: .gitignore  CMakeLists.txt  courses.ui  go.mod  go.sum  main.cpp  mugui  widget.h
Courses/: CMakeLists.txt  backend.cpp  backend.h  callback.cpp  callback.h  main.cpp  mainwindow.cpp  mainwindow.h  messages.cpp  messages.h  testio.cpp  testio.h  widget.cpp  widget.h
backend_go/: go.mod
base/: db_manager.go  structures.go
docs/: README  activity_placement.md  courses.md  gui_interface.md  lesson_placement.md  student_groups.md  terminology.md
fet/: activities.go  classes.go  constraints.go  constraints_class.go  constraints_extra.go  constraints_teacher.go  fet_base.go  prepare_placements.go  read_placements.go  rooms.go  setup_activities.go  setup_constraints.go  setup_placements_base.go  setup_resource_blocks.go
fet2xlsx/: activities.go  students.go  teachers.go  xlsxformat.go
frontend/courses_gui/: CMakeLists.txt  main.cpp
frontend/courses_gui/courses/: courses_gui.cpp  courses_gui.h  editform.cpp  editform.h
frontend/guilibtest/: CMakeLists.txt  dispatcher.cpp  editform.cpp  fltk_json.h  fltk_minion.h  layout.cpp  layout.h  layout_test.cpp  main.cpp  minion.cpp  minion.h  minion_map2.cpp  rowtable.cpp  rowtable.h  test_table.cpp  testminion.cpp  widget.cpp  widget_base.cpp  widget_base.h  widget_methods.cpp  widget_methods.h  widgets.cpp  widgets.h  widgets_test.cpp
frontend/guilibtest/data/: course_editor.minion  gui.minion  gui0.minion
frontend/guilibtest/go/test1/: README.md  connector.c  connector.h  go.mod  main.go
frontend_go/: go.mod  main.go
guidata/: studentgroups1.minion
readfet/: fet_read.go  fet_structures.go
readxml/: categories.go  classes.go  courses.go  (+7 more)
ttplacer/: CMakeLists.txt  activity.cpp  activity.h  baseconstraint.cpp  baseconstraint.h  course.cpp  course.h  main.cpp  prng.h  structures.h
ttplacer/testdata/: Demo1_tt.json  x01_tt.json
(+106 files in other folders)
